objects/CN_Messaging_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>CN_AES_IV__c</fullName>
        <label>MsgSetting AES IV</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_AES_privateKey__c</fullName>
        <label>MsgSetting AES privateKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_FeedBackUrl__c</fullName>
        <label>MsgSetting FeedBackUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CN_JWT_privateKey__c</fullName>
        <label>MsgSetting JWT privateKey</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>CN_Messaging_Setting</label>
    <pluralLabel>CN_Messaging_Setting</pluralLabel>
</CustomObject>